force-app/main/default/objects/ACME_LeadScoringCriteria__mdt/ACME_LeadScoringCriteria__mdt.object-meta.xml
<CustomMetadata>
    <label>Lead Scoring Criteria</label>
    <pluralLabel>Lead Scoring Criteria</pluralLabel>
    <description>Defines scoring criteria for lead evaluation</description>
</CustomMetadata>