force-app/main/default/objects/ACME_LeadScoringCriteria__mdt/fields/CriteriaName__c.field-meta.xml
<CustomField>
    <fullName>CriteriaName__c</fullName>
    <label>Criteria Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>