force-app/main/default/objects/ACME_LeadScoringCriteria__mdt/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <label>Field to Evaluate</label>
    <type>Text</type>
    <length>255</length>
</CustomField>