force-app/main/default/objects/ACME_LeadScoringCriteria__mdt/fields/MaximumPoints__c.field-meta.xml
<CustomField>
    <fullName>MaximumPoints__c</fullName>
    <label>Maximum Points</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>