force-app/main/default/objects/ACME_LeadScoringCriteria__mdt/fields/MinimumThreshold__c.field-meta.xml
<CustomField>
    <fullName>MinimumThreshold__c</fullName>
    <label>Minimum Threshold</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>