force-app/main/default/objects/ACME_LeadScoringCriteria__mdt/fields/ScoreType__c.field-meta.xml
<CustomField>
    <fullName>ScoreType__c</fullName>
    <label>Score Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Engagement</fullName>
            </value>
            <value>
                <fullName>Demographics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>